testing/tests/ui/no-such-escaper.stderr
error: invalid escaper 'latex' for `escape` filter. The available extensions are: "", "askama", "askama", "htm", "html", "j2", "jinja", "jinja2", "md", "none", "svg", "txt", "xml", "yml"
 --> LocalEscaper.html:1:38
       "text|escape(\"latex\")}}`."
 --> tests/ui/no-such-escaper.rs:6:14
  |
6 |     source = r#"In LaTeX you write `{{text}}` like `{{text|escape("latex")}}`."#,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no escaper defined for extension 'tex'. You can define an escaper in the config file (named `askama.toml` by default). The available extensions are: "", "askama", "askama", "htm", "html", "j2", "jinja", "jinja2", "md", "none", "svg", "txt", "xml", "yml"
  --> tests/ui/no-such-escaper.rs:14:11
   |
14 |     ext = "tex",
   |           ^^^^^

error: no escaper defined for extension 'tex'. You can define an escaper in the config file (named `askama.toml` by default). The available extensions are: "", "askama", "askama", "htm", "html", "j2", "jinja", "jinja2", "md", "none", "svg", "txt", "xml", "yml"
  --> tests/ui/no-such-escaper.rs:22:19
   |
22 | #[template(path = "latex-file.tex")]
   |                   ^^^^^^^^^^^^^^^^
